--- a/FilipeJessicaCarol/Info.plist
+++ b/FilipeJessicaCarol/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Vamos escolher uma foto?</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Vamos tirar uma foto?</string>
 </dict>
 </plist>
